--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.303.0",
+    "mongoose": "^8.0.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.15.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.1.1"
+    "uploadthing": "^6.1.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
