--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ MONGODB_URI=
 CLERK_WEBHOOK_SECRET=
 UPLOADTHING_SECRET=
 UPLOADTHING_APP_ID=
+
+STRIPE_SECRET_KEY=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=whsec_u9VmrdzvUCdReBopxBvg7alCOFTTt6kM
+
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
