Improved ui and changed formatting utility functions

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,6 @@ UPLOADTHING_APP_ID=
 
 STRIPE_SECRET_KEY=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
-STRIPE_WEBHOOK_SECRET=whsec_u9VmrdzvUCdReBopxBvg7alCOFTTt6kM
+STRIPE_WEBHOOK_SECRET=
 
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
